# lexwiki

./: .gitignore  .mcp.json  .mcpbignore  PRIVACY.md  README.md  lexwiki.yaml.example  manifest.json  pyproject.toml
skill/: Skill.md
src/lexwiki/: __init__.py  config.py  types.py
src/lexwiki/cli/: app.py
src/lexwiki/compile/: backlinker.py  chunker.py  compiler.py
src/lexwiki/compile/prompts/: classify.py  index.py  lint.py  summarize.py
src/lexwiki/extract/: __init__.py  _html_to_md.py  docx.py  html.py  pdf.py  plain.py  pptx.py  router.py  xlsx.py
src/lexwiki/lint/: linter.py
src/lexwiki/llm/: __init__.py  client.py  tokens.py
src/lexwiki/mcp_server/: server.py
src/lexwiki/query/: engine.py  search.py
tests/: conftest.py  test_compile.py  test_config.py  test_env_config.py  test_extract.py
